tests/success/struct_member_enum_size_resolve.bz
struct S
{
	.i: int32;
	.e: E;
}

consteval s = get_s();

function get_s() -> S
{
	return S[ 0, .a ];
}

enum E
{
	a, b, c
}
