tests/error/comptime/pointer_difference10.bz
function test()
{
	(consteval {
		consteval t = [ 0, 0 ];
		&t[1] - &t[0];
	});
}
